fix sponsor white space

--- a/app/assets/stylesheets/creative/creative.css.scss
+++ b/app/assets/stylesheets/creative/creative.css.scss
@@ -585,6 +585,11 @@ img::-moz-selection {
 .company-area{
 }
 
+.fix-white-space{
+    padding:10px;
+    background-color:white;
+}
+
 .ubiregi{
     background-color:white;
     width:280px;
